<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/editText1_hint"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:hint="@string/editText2_hint" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/compare_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare_button" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_initial"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>